# HumanAwareRobotNavigation

./: LICENSE  README.md
src/hokuyo/: CMakeLists.txt  package.xml
src/hokuyo/cfg/: Hokuyo.cfg
src/hokuyo/src/: getFirmwareVersion.cpp  getID_hokuyo.cpp  getID_urg.cpp  hokuyo.cpp  hokuyo_node.cpp  urg_c_wrapper.cpp  urg_node.cpp
src/human_aware_navigation/: CMakeLists.txt  package.xml
src/human_aware_navigation/config/: .costmap_local_params.yaml.swp  costmap_common_params_real_robot.yaml  costmap_common_params_simulation.yaml  costmap_global_params_laser.yaml  costmap_global_params_static.yaml  costmap_local_params.yaml  localizationRealRobot.yaml  localizationSimulation.yaml  planner.yaml  planner_old.yaml
src/human_aware_navigation/include/human_aware_navigation/: DetectedPeopleTransformBroadcaster.hpp  DistanceMeasurer.hpp  GoalManager.hpp  GoalSender.hpp  KeyboardManager.hpp  PeopleStationMerger.hpp
src/human_aware_navigation/launch/: DetectedPeopleTransformBroadcaster.launch  DistanceMeasurer.launch  GoalManager.launch  GoalSender.launch  KeyboardManager.launch  amcl.launch  bringup.launch  bringupWithout.launch  ekf.launch  getMap.launch  mapping.launch  navigation.launch  peopleDetection.launch  peopleStationMerger.launch  robotLocalization.launch  rviz.launch  transformers.launch  world.launch
src/human_aware_navigation/map/: myMap.pgm  myMapExample.yaml  quartos_xico.pgm  quartos_xico.yaml  realExperienceMap.yaml  ricsLab.yaml  ricsMap.yaml
src/human_aware_navigation/meshes/: eurocontainer_297.blend  eurocontainer_400.blend  eurocontainer_600.blend  railway.blend  railway.dae  railway_3.blend
src/human_aware_navigation/misc/: labels.xml  labels.xml.save  labelsExample.xml  realExperienceLabeledMap.xcf
src/human_aware_navigation/models/: package.xml
src/human_aware_navigation/models/Container_Rack_2x3/: container_racks_2x3.sdf  model.config
src/human_aware_navigation/models/Container_Rack_3x3/: container_racks_3x3.sdf  model.config
src/human_aware_navigation/models/RAAL_op30/: RAAL_op30.sdf  model.config
src/human_aware_navigation/models/RAAL_op50/: RAAL_op50.sdf
src/human_aware_navigation/models/RAAL_op70/: RAAL_op70.sdf  model.config
src/human_aware_navigation/models/RWAL_op10/: RWAL_op10.sdf  model.config
src/human_aware_navigation/models/RWAL_op20/: RWAL_op20.sdf  model.config
src/human_aware_navigation/models/RWAL_op30/: RWAL_op30.sdf
src/human_aware_navigation/models/RWAL_op40/: RWAL_op40.sdf  model.config
src/human_aware_navigation/models/Workstation/: model.config  model.sdf
src/human_aware_navigation/models/assembly_station/: model.config
src/human_aware_navigation/models/assembly_station_2/: assembly_station_2.sdf  model.config
src/human_aware_navigation/models/bump/: model.config
src/human_aware_navigation/models/container_racks/: model.config
src/human_aware_navigation/models/enclosedWalls/: model.config  model.sdf
src/human_aware_navigation/models/eurocontainer_A/: eurocontainer_A.sdf  model.config
src/human_aware_navigation/models/eurocontainer_B/: eurocontainer_B.sdf  model.config
src/human_aware_navigation/models/eurocontainer_C/: eurocontainer_C.sdf  model.config
src/human_aware_navigation/models/eurocontainer_D/: eurocontainer_D.sdf  model.config
src/human_aware_navigation/models/ground_plane/: ground_plane.sdf  model.config
src/human_aware_navigation/models/op_station/: model.config  op_station.sdf
src/human_aware_navigation/models/walls/: model.config  walls.sdf
src/human_aware_navigation/msg/: DetectedPeople.msg  DetectedPerson.msg  DetectedStation.msg  DetectedStations.msg  TaskFinished.msg
src/human_aware_navigation/rviz/: human_aware_navigation.rviz  thesis.rviz
src/human_aware_navigation/scripts/: install_dependencies.sh
src/human_aware_navigation/src/: DetectedPeopleTransformBroadcaster.cpp  DetectedPeopleTransformBroadcaster_Node.cpp  DistanceMeasurer.cpp  DistanceMeasurer_Node.cpp  GoalManager.cpp  GoalManager_Node.cpp  GoalSender.cpp  GoalSender_Node.cpp  KeyboardManager.cpp  KeyboardManager_Node.cpp  PeopleStationMerger.cpp  PeopleStationMerger_Node.cpp
src/human_aware_navigation/srv/: GetPathDistanceDeviation.srv
src/human_aware_navigation/worlds/: myWorldWithCones.world  myWorldWithoutCones.world  realExperience.world  tofas_shopfloor.world
src/people_simulation/: CMakeLists.txt  package.xml
src/people_simulation/include/simulator_app/: simulator.hpp
src/people_simulation/src/: simulator.cpp  simulator.cpp.save  simulator.cpp.save.1  simulator.cpp.save.2  simulator_node.cpp
src/stations_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
src/stations_layer/cfg/: StationLayer.cfg
src/stations_layer/include/stations_layer/: StationLayer.hpp
src/stations_layer/src/: StationLayer.cpp
src/thesis/: CMakeLists.txt  package.xml
src/thesis/config/: costmap_common_params.yaml  costmap_common_params_real_robot.yaml  costmap_common_params_simulation.yaml  costmap_global_params_laser.yaml  costmap_global_params_static.yaml  costmap_local_params.yaml  localizationRealRobot.yaml  localizationSimulation.yaml  planner.yaml
src/thesis/include/thesis/: PeopleStationMerger.hpp  gridMapping.hpp
src/thesis/launch/: amcl.launch  bringup.launch  getMap.launch  mapping.launch  navigation.launch  peopleDetection.launch  peopleSimulator.launch  peopleStationMerger.launch  robotLocalization.launch  rviz.launch  thesis_bringup.launch  transformers.launch  turtlebot.launch  world.launch
src/thesis/map/: myMap.yaml
src/thesis/misc/: colors.xml  labels.xml  stations.xml
src/thesis/models/: CMakeLists.txt
src/thesis/models/RAAL_op50/: model.config
src/thesis/models/RAAL_op60/: RAAL_op60.sdf  model.config
src/thesis/models/RWAL_op30/: model.config
src/thesis/msg/: DetectedPerson.msg
src/thesis/rviz/: thesis.rviz
src/thesis/scripts/: install_dependencies.sh
src/thesis/src/: PeopleStationMerger.cpp  PeopleStationMerger_Node.cpp  gridMapping.cpp  gridMapping_Node.cpp
src/utilities/: CMakeLists.txt  package.xml
src/utilities/src/: printer.cpp
(+64 files in other folders)
