<?xml version="1.0"?>
<package>
  <name>human_aware_navigation</name>
  <version>0.0.1</version>
  <description>The human_aware_navigation package</description>

  <author email="dmr.goncalves@campus.fct.unl.pt">Duarte Gonçalves!!</author>
  <maintainer email="dmr.goncalves@campus.fct.unl.pt">Duarte Gonçalves!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tinyxml2</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>tinyxml2</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
