<?xml version="1.0"?>
<package>
  <name>people_simulation</name>
  <version>0.0.0</version>
  <description>The people_simulation package</description>

  <author email="dmr.goncalves@campus.fct.unl.pt">Duarte Gonçalves!!</author>
  <maintainer email="dmr.goncalves@campus.fct.unl.pt">Duarte Gonçalves!!</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>spencer_tracking_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
