<package>
  <name>stations_layer</name>
  <version>0.0.1</version>
  <description>
    Plugin-based layers for the navigation stack that
    implement a gaussian around a workstation
  </description>

  <author email="dmr.goncalves@campus.fct.unl.pt">Duarte Gonçalves!!</author>
  <maintainer email="dmr.goncalves@campus.fct.unl.pt">Duarte Gonçalves!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
  </export>

</package>
