<?xml version="1.0"?>
<package>
  <name>utilities</name>
  <version>0.0.1</version>
  <description>The utilities package</description>

  <author email="dmr.goncalves@campus.fct.unl.pt">Duarte Gonçalves!!</author>
  <maintainer email="dmr.goncalves@campus.fct.unl.pt">Duarte Gonçalves!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  
  <run_depend>roscpp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
